--- a/src/fonts/config.json
+++ b/src/fonts/config.json
@@ -7,61 +7,117 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "c1f1975c885aa9f3dad7810c53b82074",
+      "uid": "60612554c452aa7940ce73860b9a4b49",
       "css": "lock",
-      "code": 59393,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "657ab647f6248a6b57a5b893beaf35a9",
-      "css": "lock-open",
       "code": 59392,
-      "src": "fontawesome"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M179 429H464V321Q464 262 422 220T321 179 220 220 179 321V429ZM643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H71V321Q71 219 145 145T321 71 498 145 571 321V429H589Q612 429 627 444T643 482Z",
+        "width": 642
+      },
+      "search": [
+        "lock"
+      ]
     },
     {
-      "uid": "e594fc6e5870b4ab7e49f52571d52577",
-      "css": "resize-full",
+      "uid": "b28286f9770aaece4022bcae5718ce88",
+      "css": "lock-open",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M929 321V464Q929 479 918 489T893 500H857Q843 500 832 489T821 464V321Q821 262 780 220T679 179 578 220 536 321V429H589Q612 429 627 444T643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H429V321Q429 218 502 145T679 71 855 145 929 321Z",
+        "width": 928
+      },
+      "search": [
+        "lock-open"
+      ]
+    },
+    {
+      "uid": "9dd9e835aebe1060ba7190ad2b2ed951",
+      "css": "search",
       "code": 59394,
       "src": "fontawesome"
     },
     {
-      "uid": "3c24ee33c9487bbf18796ca6dffa1905",
-      "css": "resize-small",
+      "uid": "12be5a4f3c6627ff0e39dddee2025e5d",
+      "css": "resize-full",
       "code": 59395,
-      "src": "fontawesome"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M421 589Q421 596 416 602L231 787 311 868Q321 878 321 893T311 918 286 929H36Q21 929 11 918T0 893V643Q0 628 11 618T36 607 61 618L141 698 327 513Q332 507 339 507T352 513L416 576Q421 582 421 589ZM857 107V357Q857 372 847 382T821 393 796 382L716 302 531 487Q525 493 518 493T505 487L441 423Q436 418 436 411T441 398L627 213 546 132Q536 122 536 107T546 82 571 71H821Q836 71 847 82T857 107Z",
+        "width": 857
+      },
+      "search": [
+        "resize-full"
+      ]
     },
     {
-      "uid": "5211af474d3a9848f67f945e2ccaf143",
-      "css": "cancel",
+      "uid": "33973fa333ad375d5a633bedcdafd435",
+      "css": "resize-small",
       "code": 59396,
-      "src": "fontawesome"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M429 536V786Q429 800 418 811T393 821 368 811L287 730 102 916Q97 921 89 921T77 916L13 852Q7 846 7 839T13 826L198 641 118 561Q107 550 107 536T118 511 143 500H393Q407 500 418 511T429 536ZM850 161Q850 168 844 173L659 359 739 439Q750 450 750 464T739 489 714 500H464Q450 500 439 489T429 464V214Q429 200 439 189T464 179 489 189L570 269 755 84Q761 79 768 79T781 84L844 148Q850 153 850 161Z",
+        "width": 857
+      },
+      "search": [
+        "resize-small"
+      ]
     },
     {
-      "uid": "5e9f01871d44e56b45ecbfd00f4dbc3a",
-      "css": "layout",
+      "uid": "902a4e8e6f5592bbf98bdc47626fdc95",
+      "css": "cancel",
       "code": 59397,
-      "src": "entypo"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M724 738Q724 760 709 776L633 852Q617 867 595 867T557 852L393 687 229 852Q213 867 191 867T153 852L77 776Q61 760 61 738T77 700L241 536 77 372Q61 356 61 334T77 296L153 220Q169 204 191 204T229 220L393 384 557 220Q573 204 595 204T633 220L709 296Q724 311 724 334T709 372L545 536 709 700Q724 715 724 738Z",
+        "width": 785
+      },
+      "search": [
+        "cancel"
+      ]
     },
     {
-      "uid": "bc64550dd022ce21604f97309b346cea",
-      "css": "cog",
+      "uid": "0f5c02613b953e4a957c9ede7a2a1736",
+      "css": "layout",
       "code": 59398,
-      "src": "entypo"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M170 200Q250 200 250 280V370Q250 450 170 450H80Q0 450 0 370V280Q0 200 80 200H170ZM520 200Q600 200 600 280V370Q600 450 520 450H430Q350 450 350 370V280Q350 200 430 200H520ZM170 550Q250 550 250 630V720Q250 800 170 800H80Q0 800 0 720V630Q0 550 80 550H170ZM520 550Q600 550 600 630V720Q600 800 520 800H430Q350 800 350 720V630Q350 550 430 550H520Z",
+        "width": 600
+      },
+      "search": [
+        "layout"
+      ]
     },
     {
-      "uid": "815503841e980c848f55e0271deacead",
+      "uid": "258df07a96c2a33edba9b8fbe0d86b69",
       "css": "link",
       "code": 59399,
-      "src": "entypo"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M294 734Q308 720 328 720T364 734Q396 768 364 804L322 844Q266 900 189 900T56 844 0 711 56 578L204 430Q274 362 348 353T476 396Q492 412 492 432T476 468Q440 500 406 468 356 420 274 502L126 648Q100 674 100 712T126 775 189 800 252 774ZM744 160Q800 216 800 293T744 426L586 584Q512 656 436 656 374 656 324 606 310 592 310 572T324 537 359 522 394 536Q444 584 516 512L674 356Q702 328 702 291T674 230Q650 204 618 199T558 220L508 270Q492 284 472 284T438 270Q404 236 438 200L488 150Q542 96 615 99T744 160Z",
+        "width": 800
+      },
+      "search": [
+        "link"
+      ]
     },
     {
-      "uid": "bac5560321c6d563a572b825ee747568",
+      "uid": "931bb8ea6223fb95f227bb8f63465339",
       "css": "bybit",
       "code": 59400,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M695 364.4S643.7 348.1 640.6 350L391.2 22.5S343.1 44.4 340 46.9L550.6 308.1C546.9 312.5 499.4 312.5 495 312.5L272.5 91.9 234.3 135.6 418.7 312.5C415 316.9 373.1 333.8 369.4 338.8L191.8 203.8C191.8 206.9 170 251.9 168.1 255L311.8 357.5C311.8 361.9 275.6 391.3 272.5 396.3L165 339.4S165 391.9 165 394.4L227.5 433.8 223.1 443.1 165.6 431.9 206.8 463.1C124.3 578.1 143.7 762.5 249.3 889.4L210 779.4H218.1L291.2 945S340.6 961.3 344.3 960L226.8 703.1S241.2 666.9 243.7 665.6L425 995.7C428.7 995.7 480.6 1001.9 487.5 999.4L270 635S326.2 663.1 332.5 660.6L561.9 995.7C565 995.7 613.1 979.4 615.6 976.9L396.8 681.3C400.6 681.3 456.2 692.5 459.4 689.4L685 939.4S726.9 905 729.4 901.9L536.9 700.7C540.6 696.3 588.1 687.5 591.9 683.2L779.4 838.8 812.5 793.2 653.7 668.2C653.7 663.2 695.6 638.8 698.7 633.8L830.6 714.4C830.6 711.3 837.5 661.9 838.7 659.4L749.4 599.4C749.4 595.6 778.7 565.6 780.6 562.5L838.7 574.4 796.2 543.1C876.9 436.9 853.7 230.6 745 105.6L800 250S768.7 254.4 765.6 256.3L666.2 45C663.1 45 610.6 22.5 606.9 24.4L754.4 320.6C751.2 320.6 715.6 316.3 712.5 320.6L525.6 0C521.9 0 472.5 6.3 469.4 8.8Z",
+        "path": "M695 364L669 356Q643 349 641 350L391 22 367 33Q342 45 340 47L551 308Q547 312 495 312L273 92 234 136 419 312Q417 314 394 325T369 339L192 204Q192 206 181 229T168 255L312 357Q312 360 288 381 274 394 273 396L165 339V394L228 434 223 443 166 432 207 463Q166 520 158 596 149 671 173 748.5T249 889L210 779H218L291 945 316 953Q342 961 344 960L227 703 234 685Q242 667 244 666L425 996 435 997Q483 1001 488 999L270 635 299 649Q329 662 333 661L562 996Q564 996 589 987.5T616 977L397 681 412 683Q457 691 459 689L685 939 706 922Q728 904 729 902L537 701Q539 698 567 691 590 685 592 683L779 839 813 793 654 668Q654 665 679 648 698 636 699 634L831 714Q831 712 834.5 686.5T839 659L749 599Q749 597 767 578 780 564 781 562L839 574 796 543Q836 491 843 410 850 332 825 251 798 167 745 106L800 250 784 252Q768 255 766 256L666 45Q665 45 648 38 610 23 607 24L754 321H749Q715 317 713 321L526 0Q521 0 496.5 3.5T469 9Z",
         "width": 1000
       },
       "search": [
@@ -69,13 +125,13 @@
       ]
     },
     {
-      "uid": "9292a7baaacec6cda7efa476f962ce17",
+      "uid": "5a1164687e2aa52f1aa536b52fa35b12",
       "css": "binance_futures",
       "code": 59401,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M306.3 418.8L500 225 693.8 418.8 806.3 306.3 500 0 193.7 306.3 306.2 418.8ZM0 500L112.5 387.5 225 500 112.5 612.5 0 500ZM306.3 581.3L500 775 693.8 581.3 806.3 693.8 500 1000 193.7 693.8 306.2 581.2ZM775 500L887.5 387.5 1000 500 887.5 612.5 775 500ZM612.5 500L500 387.5 387.5 500 500 612.5 612.5 500Z",
+        "path": "M306 419L500 225 694 419 806 306 500 0 194 306ZM0 500L113 387 225 500 113 612ZM306 581L500 775 694 581 806 694 500 1000 194 694ZM775 500L888 387 1000 500 888 612ZM613 500L500 387 388 500 500 612Z",
         "width": 1000
       },
       "search": [
@@ -83,32 +139,66 @@
       ]
     },
     {
-      "uid": "e392b748bd095b278c27391b3e05286c",
-      "css": "disconnect-svgrepo-com",
-      "code": 59399,
+      "uid": "992789927ac62fa408b8b24fe5efbce0",
+      "css": "cog",
+      "code": 59408,
       "src": "custom_icons",
-      "selected": false,
+      "selected": true,
       "svg": {
-        "path": "M1040.8 239.3C935 133.5 763.9 133.5 658.3 239.3L537.1 360.4 600.9 424.1 722 303C789.3 235.8 902.8 228.6 977 303 1051.4 377.4 1044.3 490.8 977 558L855.9 679.1 919.8 743 1040.9 621.9C1146.4 516.1 1146.4 345 1040.8 239.2ZM558.1 977C490.9 1044.3 377.4 1051.4 303.1 977 228.8 902.6 235.9 789.3 303.1 722L424.3 600.9 360.4 537 239.2 658.1C133.5 763.9 133.5 935 239.2 1040.6S516.1 1146.4 621.8 1040.6L742.9 919.5 679.1 855.8 558.1 977ZM325.4 261.8A10 10 0 0 0 311.3 261.8L261.8 311.3A10 10 0 0 0 261.8 325.4L954.8 1018.4C958.6 1022.3 965 1022.3 968.9 1018.4L1018.4 968.9C1022.3 965 1022.3 958.6 1018.4 954.8L325.4 261.8Z",
-        "width": 1000
+        "path": "M760 500Q760 572 840 622 828 662 806 704 736 686 670 748 616 806 636 884 596 904 552 920 506 838 420 838T288 920Q244 904 204 884 224 804 170 749T34 714Q20 688 0 632 82 580 82 500 82 428 0 376 20 320 34 294 108 312 170 250 224 194 204 114 246 92 288 80 334 160 420 160T552 80Q594 92 636 114 616 192 670 250 736 312 806 294 828 336 840 376 760 426 760 500ZM420 682Q496 682 549 629T602 500 549 370 420 316 291 370 238 500 291 629 420 682Z",
+        "width": 840
       },
       "search": [
-        "disconnect-svgrepo-com"
+        "cog"
       ]
     },
     {
-      "uid": "336e273abd6f7e289f16dbc34b8d97d5",
-      "css": "circle-svgrepo-com",
-      "code": 59393,
-      "src": "custom_icons",
-      "selected": false,
-      "svg": {
-        "path": "",
-        "width": 1000
-      },
-      "search": [
-        "circle-svgrepo-com"
-      ]
+      "uid": "56a21935a5d4d79b2e91ec00f760b369",
+      "css": "sort",
+      "code": 61660,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "94103e1b3f1e8cf514178ec5912b4469",
+      "css": "sort-down",
+      "code": 61661,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "65b3ce930627cabfb6ac81ac60ec5ae4",
+      "css": "sort-up",
+      "code": 61662,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d17030afaecc1e1c22349b99f3c4992a",
+      "css": "star-empty",
+      "code": 59402,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "474656633f79ea2f1dad59ff63f6bf07",
+      "css": "star",
+      "code": 59403,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "5308d824454af8ec7835786e272361a9",
+      "css": "level-up",
+      "code": 59404,
+      "src": "entypo"
+    },
+    {
+      "uid": "493hui9b6xiqaf04slclmqnwpap3oxjj",
+      "css": "popup",
+      "code": 59405,
+      "src": "typicons"
+    },
+    {
+      "uid": "85046e7e5a2fe685961d1423fcda0649",
+      "css": "chart-outline",
+      "code": 59406,
+      "src": "typicons"
     }
   ]
 }
