--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ ordered-float = "4.5.0"
 regex = "1.11.1"
 rust_decimal = "1.36.0"
 uuid = { version = "1.11.0", features = ["v4"] }
+zip = "2.2.1"
+csv = "1.3.1"
 
 [dependencies.async-tungstenite]
 version = "0.25"
