--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ rust_decimal = "1.36.0"
 uuid = { version = "1.11.0", features = ["v4"] }
 zip = "2.2.1"
 csv = "1.3.1"
+dirs-next = "2.0.0"
 
 [dependencies.async-tungstenite]
 version = "0.25"
