--- a/src/fonts/config.json
+++ b/src/fonts/config.json
@@ -7,55 +7,7 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "60612554c452aa7940ce73860b9a4b49",
-      "css": "lock",
-      "code": 59392,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M179 429H464V321Q464 262 422 220T321 179 220 220 179 321V429ZM643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H71V321Q71 219 145 145T321 71 498 145 571 321V429H589Q612 429 627 444T643 482Z",
-        "width": 642
-      },
-      "search": [
-        "lock"
-      ]
-    },
-    {
-      "uid": "b28286f9770aaece4022bcae5718ce88",
-      "css": "lock-open",
-      "code": 59393,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M929 321V464Q929 479 918 489T893 500H857Q843 500 832 489T821 464V321Q821 262 780 220T679 179 578 220 536 321V429H589Q612 429 627 444T643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H429V321Q429 218 502 145T679 71 855 145 929 321Z",
-        "width": 928
-      },
-      "search": [
-        "lock-open"
-      ]
-    },
-    {
-      "uid": "9dd9e835aebe1060ba7190ad2b2ed951",
-      "css": "search",
-      "code": 59394,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "12be5a4f3c6627ff0e39dddee2025e5d",
-      "css": "resize-full",
-      "code": 59395,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M421 589Q421 596 416 602L231 787 311 868Q321 878 321 893T311 918 286 929H36Q21 929 11 918T0 893V643Q0 628 11 618T36 607 61 618L141 698 327 513Q332 507 339 507T352 513L416 576Q421 582 421 589ZM857 107V357Q857 372 847 382T821 393 796 382L716 302 531 487Q525 493 518 493T505 487L441 423Q436 418 436 411T441 398L627 213 546 132Q536 122 536 107T546 82 571 71H821Q836 71 847 82T857 107Z",
-        "width": 857
-      },
-      "search": [
-        "resize-full"
-      ]
-    },
-    {
-      "uid": "33973fa333ad375d5a633bedcdafd435",
+      "uid": "8cbc77be5550cb1fb4a19a0894b90768",
       "css": "resize-small",
       "code": 59396,
       "src": "custom_icons",
@@ -69,77 +21,147 @@
       ]
     },
     {
-      "uid": "902a4e8e6f5592bbf98bdc47626fdc95",
-      "css": "cancel",
-      "code": 59397,
+      "uid": "1dfd33f1889ced0e568a84c11d04e633",
+      "css": "resize-full",
+      "code": 59395,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M724 738Q724 760 709 776L633 852Q617 867 595 867T557 852L393 687 229 852Q213 867 191 867T153 852L77 776Q61 760 61 738T77 700L241 536 77 372Q61 356 61 334T77 296L153 220Q169 204 191 204T229 220L393 384 557 220Q573 204 595 204T633 220L709 296Q724 311 724 334T709 372L545 536 709 700Q724 715 724 738Z",
-        "width": 785
+        "path": "M421 589Q421 596 416 602L231 787 311 868Q321 878 321 893T311 918 286 929H36Q21 929 11 918T0 893V643Q0 628 11 618T36 607 61 618L141 698 327 513Q332 507 339 507T352 513L416 576Q421 582 421 589ZM857 107V357Q857 372 847 382T821 393 796 382L716 302 531 487Q525 493 518 493T505 487L441 423Q436 418 436 411T441 398L627 213 546 132Q536 122 536 107T546 82 571 71H821Q836 71 847 82T857 107Z",
+        "width": 857
       },
       "search": [
-        "cancel"
+        "resize-full"
       ]
     },
     {
-      "uid": "0f5c02613b953e4a957c9ede7a2a1736",
-      "css": "layout",
-      "code": 59398,
+      "uid": "5f2c2d50f12caf408d4228ca995aaf42",
+      "css": "search",
+      "code": 59394,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M170 200Q250 200 250 280V370Q250 450 170 450H80Q0 450 0 370V280Q0 200 80 200H170ZM520 200Q600 200 600 280V370Q600 450 520 450H430Q350 450 350 370V280Q350 200 430 200H520ZM170 550Q250 550 250 630V720Q250 800 170 800H80Q0 800 0 720V630Q0 550 80 550H170ZM520 550Q600 550 600 630V720Q600 800 520 800H430Q350 800 350 720V630Q350 550 430 550H520Z",
-        "width": 600
+        "path": "M643 464Q643 361 570 288T393 214 216 288 143 464 216 641 393 714 570 641 643 464ZM929 929Q929 958 907 979T856 1000 807 979L616 788Q516 857 393 857 313 857 240 826T115 742 31 617 0 464 31 312 115 186 240 102 393 71 546 102 671 186 755 312 786 464Q786 587 717 687L908 878Q929 899 929 929Z",
+        "width": 928
       },
       "search": [
-        "layout"
+        "search"
       ]
     },
     {
-      "uid": "258df07a96c2a33edba9b8fbe0d86b69",
-      "css": "link",
-      "code": 59399,
+      "uid": "a985f00874021b549739e99b8fb11781",
+      "css": "lock-open",
+      "code": 59393,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M294 734Q308 720 328 720T364 734Q396 768 364 804L322 844Q266 900 189 900T56 844 0 711 56 578L204 430Q274 362 348 353T476 396Q492 412 492 432T476 468Q440 500 406 468 356 420 274 502L126 648Q100 674 100 712T126 775 189 800 252 774ZM744 160Q800 216 800 293T744 426L586 584Q512 656 436 656 374 656 324 606 310 592 310 572T324 537 359 522 394 536Q444 584 516 512L674 356Q702 328 702 291T674 230Q650 204 618 199T558 220L508 270Q492 284 472 284T438 270Q404 236 438 200L488 150Q542 96 615 99T744 160Z",
-        "width": 800
+        "path": "M929 321V464Q929 479 918 489T893 500H857Q843 500 832 489T821 464V321Q821 262 780 220T679 179 578 220 536 321V429H589Q612 429 627 444T643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H429V321Q429 218 502 145T679 71 855 145 929 321Z",
+        "width": 928
       },
       "search": [
-        "link"
+        "lock-open"
       ]
     },
     {
-      "uid": "931bb8ea6223fb95f227bb8f63465339",
-      "css": "bybit",
-      "code": 59400,
+      "uid": "34ae2a68073242f5b95d72c8334a4c37",
+      "css": "lock",
+      "code": 59392,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M695 364L669 356Q643 349 641 350L391 22 367 33Q342 45 340 47L551 308Q547 312 495 312L273 92 234 136 419 312Q417 314 394 325T369 339L192 204Q192 206 181 229T168 255L312 357Q312 360 288 381 274 394 273 396L165 339V394L228 434 223 443 166 432 207 463Q166 520 158 596 149 671 173 748.5T249 889L210 779H218L291 945 316 953Q342 961 344 960L227 703 234 685Q242 667 244 666L425 996 435 997Q483 1001 488 999L270 635 299 649Q329 662 333 661L562 996Q564 996 589 987.5T616 977L397 681 412 683Q457 691 459 689L685 939 706 922Q728 904 729 902L537 701Q539 698 567 691 590 685 592 683L779 839 813 793 654 668Q654 665 679 648 698 636 699 634L831 714Q831 712 834.5 686.5T839 659L749 599Q749 597 767 578 780 564 781 562L839 574 796 543Q836 491 843 410 850 332 825 251 798 167 745 106L800 250 784 252Q768 255 766 256L666 45Q665 45 648 38 610 23 607 24L754 321H749Q715 317 713 321L526 0Q521 0 496.5 3.5T469 9Z",
+        "path": "M179 429H464V321Q464 262 422 220T321 179 220 220 179 321V429ZM643 482V804Q643 826 627 841T589 857H54Q31 857 16 841T0 804V482Q0 460 16 444T54 429H71V321Q71 219 145 145T321 71 498 145 571 321V429H589Q612 429 627 444T643 482Z",
+        "width": 642
+      },
+      "search": [
+        "lock"
+      ]
+    },
+    {
+      "uid": "9d6d3d378d2da648a82e0d81fd7b7e4a",
+      "css": "sort-up",
+      "code": 61662,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M571 393Q571 407 561 418T536 429H36Q21 429 11 418T0 393 11 368L261 118Q271 107 286 107T311 118L561 368Q571 378 571 393Z",
+        "width": 571
+      },
+      "search": [
+        "sort-up"
+      ]
+    },
+    {
+      "uid": "975d73122f34415f72c04b495fe8504e",
+      "css": "sort-down",
+      "code": 61661,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M571 607Q571 622 561 632L311 882Q300 893 286 893T261 882L11 632Q0 622 0 607T11 582 36 571H536Q550 571 561 582T571 607Z",
+        "width": 571
+      },
+      "search": [
+        "sort-down"
+      ]
+    },
+    {
+      "uid": "55bcdf9992d884fed833b4ec7472a0ad",
+      "css": "sort",
+      "code": 61660,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M571 607Q571 622 561 632L311 882Q300 893 286 893T261 882L11 632Q0 622 0 607T11 582 36 571H536Q550 571 561 582T571 607ZM571 393Q571 407 561 418T536 429H36Q21 429 11 418T0 393 11 368L261 118Q271 107 286 107T311 118L561 368Q571 378 571 393Z",
+        "width": 571
+      },
+      "search": [
+        "sort"
+      ]
+    },
+    {
+      "uid": "2556203d4b7614994283b01762c5c528",
+      "css": "docs",
+      "code": 61637,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M946 214Q969 214 984 230T1000 268V946Q1000 969 984 984T946 1000H411Q388 1000 373 984T357 946V786H54Q31 786 16 770T0 732V357Q0 335 11 308T38 266L266 38Q281 22 308 11T357 0H589Q612 0 627 16T643 54V237Q681 214 714 214H946ZM643 333L476 500H643V333ZM286 119L119 286H286V119ZM395 480L571 304V71H357V304Q357 326 342 341T304 357H71V714H357V571Q357 549 368 522T395 480ZM929 929V286H714V518Q714 540 699 556T661 571H429V929H929Z",
         "width": 1000
       },
       "search": [
-        "bybit"
+        "docs"
       ]
     },
     {
-      "uid": "5a1164687e2aa52f1aa536b52fa35b12",
-      "css": "binance_futures",
-      "code": 59401,
+      "uid": "b187377f9ae1be008ad72c415ecc2b0a",
+      "css": "ok",
+      "code": 59410,
       "src": "custom_icons",
       "selected": true,
       "svg": {
-        "path": "M306 419L500 225 694 419 806 306 500 0 194 306ZM0 500L113 387 225 500 113 612ZM306 581L500 775 694 581 806 694 500 1000 194 694ZM775 500L888 387 1000 500 888 612ZM613 500L500 387 388 500 500 612Z",
+        "path": "M933 316Q933 338 917 354L437 834Q421 849 399 849T361 834L83 556Q68 540 68 518T83 480L159 404Q175 388 197 388T235 404L399 569 765 202Q781 186 803 186T841 202L917 278Q933 293 933 316Z",
         "width": 1000
       },
       "search": [
-        "binance_futures"
+        "ok"
       ]
     },
     {
-      "uid": "992789927ac62fa408b8b24fe5efbce0",
+      "uid": "eea00ad41add9f0d8b7ab1bd8719f5f4",
+      "css": "edit",
+      "code": 59409,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M496 661L560 596 475 511 411 576V607H464V661H496ZM741 259Q732 250 723 259L527 455Q518 464 527 473T545 473L741 277Q750 268 741 259ZM786 590V696Q786 763 739 810T625 857H161Q94 857 47 810T0 696V232Q0 166 47 119T161 71H625Q660 71 690 85 699 89 700.5 98.5T695 114L668 142Q660 150 650 146 637 143 625 143H161Q124 143 98 169T71 232V696Q71 733 98 759T161 786H625Q662 786 688 759T714 696V626Q714 619 719 614L755 578Q763 570 775 574T786 590ZM732 179L893 339 518 714H357V554ZM980 252L929 304 768 143 819 91Q835 76 857 76T895 91L980 176Q996 192 996 214T980 252Z",
+        "width": 1000
+      },
+      "search": [
+        "edit"
+      ]
+    },
+    {
+      "uid": "ad524b8f25babd3ee6bf98ebcb204886",
       "css": "cog",
       "code": 59408,
       "src": "custom_icons",
@@ -153,52 +175,158 @@
       ]
     },
     {
-      "uid": "56a21935a5d4d79b2e91ec00f760b369",
-      "css": "sort",
-      "code": 61660,
-      "src": "fontawesome"
+      "uid": "1232e723512d486c76996672988de72e",
+      "css": "trash-empty",
+      "code": 59407,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M286 411V732Q286 740 281 745T268 750H232Q224 750 219 745T214 732V411Q214 403 219 398T232 393H268Q276 393 281 398T286 411ZM429 411V732Q429 740 424 745T411 750H375Q367 750 362 745T357 732V411Q357 403 362 398T375 393H411Q419 393 424 398T429 411ZM571 411V732Q571 740 566 745T554 750H518Q510 750 505 745T500 732V411Q500 403 505 398T518 393H554Q561 393 566 398T571 411ZM643 815V286H143V815Q143 827 147 837T155 852 161 857H625Q627 857 631 852T639 837 643 815ZM268 214H518L491 149Q487 144 482 143H305Q299 144 295 149ZM786 232V268Q786 276 781 281T768 286H714V815Q714 861 688 895T625 929H161Q124 929 98 896T71 817V286H18Q10 286 5 281T0 268V232Q0 224 5 219T18 214H190L229 121Q238 100 260 86T304 71H482Q505 71 526 86T556 121L595 214H768Q776 214 781 219T786 232Z",
+        "width": 785
+      },
+      "search": [
+        "trash-empty"
+      ]
     },
     {
-      "uid": "94103e1b3f1e8cf514178ec5912b4469",
-      "css": "sort-down",
-      "code": 61661,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "65b3ce930627cabfb6ac81ac60ec5ae4",
-      "css": "sort-up",
-      "code": 61662,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "d17030afaecc1e1c22349b99f3c4992a",
-      "css": "star-empty",
-      "code": 59402,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "474656633f79ea2f1dad59ff63f6bf07",
-      "css": "star",
-      "code": 59403,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "5308d824454af8ec7835786e272361a9",
-      "css": "level-up",
-      "code": 59404,
-      "src": "entypo"
-    },
-    {
-      "uid": "493hui9b6xiqaf04slclmqnwpap3oxjj",
-      "css": "popup",
-      "code": 59405,
-      "src": "typicons"
-    },
-    {
-      "uid": "85046e7e5a2fe685961d1423fcda0649",
+      "uid": "e096c5d57e2a0c604624b66f593ef160",
       "css": "chart-outline",
       "code": 59406,
-      "src": "typicons"
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M156 734Q110 734 72 708T16 646 1 563 34 480L242 220Q281 172 346 164T459 192L545 257 659 116Q706 57 781 57 844 57 889 101T937 200 904 311L695 571Q656 619 592 627T479 599L391 534 277 675Q230 734 156 734ZM365 265Q340 265 324 285L115 545Q95 572 111 601T156 630Q181 630 197 610L374 389 541 515Q557 527 579 525T614 506L822 246Q842 219 827 190T781 161Q756 161 740 181L564 401 396 276Q384 265 365 265ZM834 943H104Q82 943 67 927T52 890 67 854 104 839H834Q855 839 870 854T885 890 870 927 834 943Z",
+        "width": 938
+      },
+      "search": [
+        "chart-outline"
+      ]
+    },
+    {
+      "uid": "e1d0e50fee22153c3f0711b43f7769f0",
+      "css": "popup",
+      "code": 59405,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M781 57Q825 57 855 88T885 161V682Q885 726 855 756T781 786H678V839Q678 881 647 912T573 943H104Q60 943 30 912T0 839V370Q0 326 31 296T104 265H156V161Q156 119 187 88T260 57H781ZM104 839H573V396Q573 386 565 378T548 370H104V839ZM781 682V161H260V317H548Q579 317 602 341T625 396V682H781Z",
+        "width": 885
+      },
+      "search": [
+        "popup"
+      ]
+    },
+    {
+      "uid": "2e7283efde2b59508975fdb7a22ce48f",
+      "css": "level-up",
+      "code": 59404,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M200 500V590L0 430 200 260V360H750Q790 360 820 389T850 460V740H710V500H200Z",
+        "width": 850
+      },
+      "search": [
+        "level-up"
+      ]
+    },
+    {
+      "uid": "c9d2f2d77f94ea2a2ce62830298ed7c2",
+      "css": "star",
+      "code": 59403,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M929 361Q929 373 914 388L712 585 760 864V876Q760 887 754 895T737.5 903.5 715 897L464 765 214 897Q202 904 191 904T174 895 168 876Q168 872 169 864L217 585 14 388Q0 373 0 361 0 340 31 335L311 295 437 41Q448 18 464 18T492 41L617 295 897 335Q929 340 929 361Z",
+        "width": 928
+      },
+      "search": [
+        "star"
+      ]
+    },
+    {
+      "uid": "055e2c45515f2eb8a28a3ef748402ee6",
+      "css": "star-empty",
+      "code": 59402,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M635 560L805 394 570 360 464 147 359 360 123 394 294 560 253 795 464 684 675 795ZM929 361Q929 373 914 388L712 585 760 864V876Q760 904 737 904 727 904 715 897L464 765 214 897Q202 904 191 904T174 895 168 876Q168 872 169 864L217 585 14 388Q0 373 0 361 0 340 31 335L311 295 437 41Q448 18 464 18T492 41L617 295 897 335Q929 340 929 361Z",
+        "width": 928
+      },
+      "search": [
+        "star-empty"
+      ]
+    },
+    {
+      "uid": "f2c922877b8459f072640e64acf80ac5",
+      "css": "binance_futures",
+      "code": 59401,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M306 419L500 225 694 419 806 306 500 0 194 306ZM0 500L113 387 225 500 113 612ZM306 581L500 775 694 581 806 694 500 1000 194 694ZM775 500L888 387 1000 500 888 612ZM613 500L500 387 388 500 500 612Z",
+        "width": 1000
+      },
+      "search": [
+        "binance_futures"
+      ]
+    },
+    {
+      "uid": "b1f8cc02630c8f9f09afafd2480d3673",
+      "css": "bybit",
+      "code": 59400,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M695 364L669 356Q643 349 641 350L391 22 367 33Q342 45 340 47L551 308Q547 312 495 312L273 92 234 136 419 312Q417 314 394 325T369 339L192 204Q192 206 181 229T168 255L312 357Q312 360 288 381 274 394 273 396L165 339V394L228 434 223 443 166 432 207 463Q166 520 157.5 595.5T173 748 249 889L210 779H218L291 945 316 953Q342 961 344 960L227 703 234 685Q242 667 244 666L425 996 435 997Q483 1001 488 999L270 635 299 649Q329 662 333 661L562 996Q564 996 589 988T616 977L397 681 412 683Q457 691 459 689L685 939 706 922Q728 904 729 902L537 701Q539 698 567 691 590 685 592 683L779 839 813 793 654 668Q654 665 679 648 698 636 699 634L831 714 839 659 749 599Q749 597 767 578 780 564 781 562L839 574 796 543Q836 491 843 410 850 332 825 251 798 167 745 106L800 250 784 252Q768 255 766 256L666 45Q665 45 648 38 610 23 607 24L754 321H749Q715 317 713 321L526 0Q521 0 497 3T469 9Z",
+        "width": 1000
+      },
+      "search": [
+        "bybit"
+      ]
+    },
+    {
+      "uid": "12cba84383b50f2091a4be50827576b3",
+      "css": "link",
+      "code": 59399,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M294 734Q308 720 328 720T364 734Q396 768 364 804L322 844Q266 900 189 900T56 844 0 711 56 578L204 430Q274 362 348 353T476 396Q492 412 492 432T476 468Q440 500 406 468 356 420 274 502L126 648Q100 674 100 712T126 775 189 800 252 774ZM744 160Q800 216 800 293T744 426L586 584Q512 656 436 656 374 656 324 606 310 592 310 572T324 537 359 522 394 536Q444 584 516 512L674 356Q702 328 702 291T674 230Q650 204 618 199T558 220L508 270Q492 284 472 284T438 270Q404 236 438 200L488 150Q542 96 615 99T744 160Z",
+        "width": 800
+      },
+      "search": [
+        "link"
+      ]
+    },
+    {
+      "uid": "2267c9cff873a6c14887d70462c6e91c",
+      "css": "layout",
+      "code": 59398,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M170 200Q250 200 250 280V370Q250 450 170 450H80Q0 450 0 370V280Q0 200 80 200H170ZM520 200Q600 200 600 280V370Q600 450 520 450H430Q350 450 350 370V280Q350 200 430 200H520ZM170 550Q250 550 250 630V720Q250 800 170 800H80Q0 800 0 720V630Q0 550 80 550H170ZM520 550Q600 550 600 630V720Q600 800 520 800H430Q350 800 350 720V630Q350 550 430 550H520Z",
+        "width": 600
+      },
+      "search": [
+        "layout"
+      ]
+    },
+    {
+      "uid": "edb9134542d6c1a0f1656e9aa91bc9d9",
+      "css": "cancel",
+      "code": 59397,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M724 738Q724 760 709 776L633 852Q617 867 595 867T557 852L393 687 229 852Q213 867 191 867T153 852L77 776Q61 760 61 738T77 700L241 536 77 372Q61 356 61 334T77 296L153 220Q169 204 191 204T229 220L393 384 557 220Q573 204 595 204T633 220L709 296Q724 311 724 334T709 372L545 536 709 700Q724 715 724 738Z",
+        "width": 785
+      },
+      "search": [
+        "cancel"
+      ]
     }
   ]
 }
