--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,35 +2,28 @@
 name = "flowsurface"
 version = "0.5.1"
 edition = "2024"
+readme = "README.md"
+license = "GPL-3.0-or-later"
+categories = ["finance", "visualization", "gui"]
+repository = "https://github.com/akenshaw/flowsurface"
 
 [dependencies]
 iced = { version = "0.14.0-dev", features = ["canvas", "tokio", "image", "advanced", "lazy"] }
 iced_futures = "0.13.2"
 chrono = "0.4.38"
-tokio = { version = "1.41.1", features = ["full", "macros"] }
-tokio-tungstenite = "0.21.0"
-url = "2.5.3"
-tokio-native-tls = "0.3.1"
-base64 = "0.22.1"
-native-tls = "0.2.12"
-tungstenite = "0.21.0"
+tokio = { version = "1.43", features = ["macros"] }
 futures = "0.3.31"
-futures-util = "0.3.31"
 serde_json = "1.0.132"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.12.9", features = ["json"] }
-hmac = "0.12.1"
-sha2 = "0.10.8"
-hex = "0.4.3"
 bytes = "1.8.0"
 sonic-rs = "0.3.17"
-fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
+fastwebsockets = { version = "0.9.0", features = ["upgrade"] }
 http-body-util = "0.1.2"
 hyper = { version = "1", features = ["http1", "server", "client"] }
-hyper-util = { version = "0.1.10", features = ["tokio"] }
+hyper-util = { version = "0.1.10" }
 tokio-rustls = "0.24.1"
 webpki-roots = "0.23.1"
-rustc-hash = "2.0.0"
 fern = "0.6.2"
 log = "0.4.22"
 thiserror = "1.0.68"
@@ -42,9 +35,5 @@ zip = "2.2.1"
 csv = "1.3.1"
 dirs-next = "2.0.0"
 
-[dependencies.async-tungstenite]
-version = "0.25"
-features = ["tokio-rustls-webpki-roots"]
-
 [patch.crates-io]
-iced = { git = "https://github.com/iced-rs/iced", rev = "34314b3f576fdfffdd82968a685020d4dca47992" }
+iced = { git = "https://github.com/iced-rs/iced", rev = "beddf49c76f3b43e7b33452831e1293cad28fd89" }
