Separate configs unrelated to UI to `data` crate (#34)
* initial commit

* implement a new crate; `data`, to seperate savable state configs

* move some pane structs into `data` crate

* carry more layout structs to `data` crate

* migrate more layout stuff to `data`

* move more types to `data` & `exchanges`

* move `aggr` into `data` crate

* refactors to organize `data` crate

* wrap window spec configs in the `data` crate

* some naming conventions

* move some fetch request methods into `exchanges`

* refactor!: move `Sidebar` into `data` crate

* fix: pane status showing up on wrong window if pane is "pop up"

* refactors for conciser code

* remove redundant code, adjust paddings for layout manager modal

* fix fetched data losing the target pane if its window popped up during request

* refactors for conciser code

* refactors for idiomatic code, remove redundant methods

* implement ability to backup state in case it corrupts

* adjust backup file naming logic

* update crate revs

* change min window size for pop-ups, refactors for readability

* minor tweaks on to polish up

* remove redundant `frame.with_save` closures in render

* improve logger, implement batching and part it into `data`

* simplify logger, keep previous log file in rotation, implement file size limit

* improve contrast for tickers table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flowsurface"
-version = "0.6.0"
+version = "0.6.1"
 edition = "2024"
 readme = "README.md"
 license = "GPL-3.0-or-later"
@@ -8,41 +8,45 @@ categories = ["finance", "visualization", "gui"]
 repository = "https://github.com/akenshaw/flowsurface"
 
 [workspace]
-members = ["exchanges"]
+members = [ "data", "exchanges"]
 
 [workspace.dependencies]
 iced_futures = "0.13.2"
-chrono = "0.4.38"
+iced_core = "0.14.0-dev"
+chrono = { version = "0.4.40", features = ['serde'] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.132"
 log = "0.4.22"
-thiserror = "1.0.68"
-ordered-float = "4.5.0"
+thiserror = "2.0.12"
+ordered-float = "5.0.0"
 regex = "1.11.1"
+rust_decimal = "1.36.0"
+uuid = { version = "1.11.0", features = ["v4"] }
 
 [dependencies]
 iced = { version = "0.14.0-dev", default-features = false, features = [
     "wgpu", 
-    "canvas", 
-    "tokio", 
-    "advanced", 
     "lazy", 
+    "tokio", 
+    "canvas",
+    "advanced",
     "unconditional-rendering",
 ] }
+iced_core.workspace = true
 iced_futures.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 ordered-float.workspace = true
-regex.workspace = true
 log.workspace = true
-rust_decimal = "1.36.0"
-fern = "0.6.2"
-dirs-next = "2.0.0"
-uuid = { version = "1.11.0", features = ["v4"] }
+uuid.workspace = true
+fern = "0.7.1"
 
 exchanges = { version = "0.1.0", path = "exchanges" }
+data = { version = "0.1.0", path = "data" }
 
 [patch.crates-io]
-iced = { git = "https://github.com/iced-rs/iced", rev = "892ac1ce722a809e73aecd8d47ed4e7254d156df" }
+iced = { git = "https://github.com/iced-rs/iced", rev = "4b075b9731f4658a885357024cc77dee10e223c3" }
+iced_core = { git = "https://github.com/iced-rs/iced", rev = "4b075b9731f4658a885357024cc77dee10e223c3", package = "iced_core" }
+
