--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -9,9 +9,12 @@ chrono.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 log.workspace = true
+rust_decimal.workspace = true
 thiserror.workspace = true
 ordered-float.workspace = true
 regex.workspace = true
+uuid.workspace = true
+
 tokio = { version = "1.43", features = ["macros"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 bytes = "1.8.0"
