--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -14,4 +14,4 @@ thiserror.workspace = true
 regex.workspace = true
 dirs-next = "2.0.0"
 
-exchanges = { version = "0.1.0", path = "../exchanges" }
+exchange = { version = "0.1.0", path = "../exchange" }
