--- a/exchange/Cargo.toml
+++ b/exchange/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "exchanges"
+name = "exchange"
 version = "0.1.0"
 edition = "2024"
 
@@ -12,11 +12,10 @@ log.workspace = true
 rust_decimal.workspace = true
 thiserror.workspace = true
 ordered-float.workspace = true
-regex.workspace = true
 uuid.workspace = true
 
 tokio = { version = "1.43", features = ["macros"] }
-reqwest = { version = "0.12.9", features = ["json"] }
+reqwest = { version = "0.12.9", features = ["json", "brotli"] }
 bytes = "1.8.0"
 sonic-rs = "0.4.0"
 fastwebsockets = { version = "0.9.0", features = ["upgrade"] }
