Sound effects for trade streams (#41)
* initial commit

* persist volume level across saved states

* use `HashSet` to identify audio streams

* refactors for modularity, add one more icon for volume info

* wrap audio streams into new type

* tweaks on ui for audio streams

* add configurable threshold to trigger a sound

* improve filtering logic for when to trigger a sound, remove redundant audio files

* refactors for modularity, remove unused feats of `rodio`

* run clippy

--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -13,5 +13,6 @@ log.workspace = true
 thiserror.workspace = true
 regex.workspace = true
 dirs-next = "2.0.0"
+rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}
 
 exchange = { version = "0.1.0", path = "../exchange" }
