--- a/exchange/Cargo.toml
+++ b/exchange/Cargo.toml
@@ -15,7 +15,7 @@ ordered-float.workspace = true
 uuid.workspace = true
 
 tokio = { version = "1.43", features = ["macros"] }
-reqwest = { version = "0.12.9", features = ["json", "brotli"] }
+reqwest = { version = "0.12.9", default-features = false, features = ["json", "brotli", "rustls-tls"] }
 bytes = "1.8.0"
 sonic-rs = "0.4.0"
 fastwebsockets = { version = "0.9.0", features = ["upgrade"] }
