feat!: reworked chart panel splits (#45)
This PR also merges `CandlestickChart` & `FootprintChart` into single chart instance, `KlineChart`. This means `FootprintIndicator` & `CandlestickIndicator` merged into `KlineIndicator` as well. Nothing changes on user side, this is just for conciser code
 
* feat!: improve chart panel splits' layouting

* handle clamping more gracefully

* run clippy and organize indicator split mgment

* feat: reorder indicators with drag&drop

* fix(widget): clamp dragged ghost to container bounds

* fix indicator reordering for `FootprintChart`

* panel ruler styling, improve tooltip behavior

* make column drag more explicit with handle icons

* refactors to polish up

* refactors to refine indicator data tyoe conversions

* refactor!: merge `CandlestickChart`&`FootprintChart` into single instance, `KlineChart`

* carry chart constants to `data` crate

* (kline chart)add helper methods to make drawing conciser

* refactors for idiomatic code

* run clippy

* remove unused deps

* fix splits causing assert panic on spot market tickers

--- a/assets/fonts/config.json
+++ b/assets/fonts/config.json
@@ -77,20 +77,6 @@
       ]
     },
     {
-      "uid": "9d6d3d378d2da648a82e0d81fd7b7e4a",
-      "css": "sort-up",
-      "code": 61662,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M571 393Q571 407 561 418T536 429H36Q21 429 11 418T0 393 11 368L261 118Q271 107 286 107T311 118L561 368Q571 378 571 393Z",
-        "width": 571
-      },
-      "search": [
-        "sort-up"
-      ]
-    },
-    {
       "uid": "975d73122f34415f72c04b495fe8504e",
       "css": "sort-down",
       "code": 61661,
@@ -345,6 +331,34 @@
       "css": "volume-middle",
       "code": 59414,
       "src": "typicons"
+    },
+    {
+      "uid": "9d6d3d378d2da648a82e0d81fd7b7e4a",
+      "css": "sort-up",
+      "code": 61662,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M571 393Q571 407 561 418T536 429H36Q21 429 11 418T0 393 11 368L261 118Q271 107 286 107T311 118L561 368Q571 378 571 393Z",
+        "width": 571
+      },
+      "search": [
+        "sort-up"
+      ]
+    },
+    {
+      "uid": "ec5a1cc2949f6983a7e9534b725552e9",
+      "css": "drag-handle-svgrepo-com-converted",
+      "code": 59415,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M293.1 1.6C235.9 12.1 194.8 55.2 188.6 111.4 181.8 171.7 218.7 226.7 278.3 245.2 296.3 250.7 328.7 250.7 346.7 245.2 387.5 232.5 417.8 203.5 430.7 164.8 453.3 97.1 414.9 24.3 346.4 5 332.7 1.1 305.2-0.6 293.1 1.6M668.1 1.6C610.9 12.1 569.8 55.2 563.6 111.4 556.8 171.7 593.7 226.7 653.3 245.2 671.3 250.7 703.7 250.7 721.7 245.2 762.5 232.5 792.8 203.5 805.7 164.8 828.3 97.1 789.9 24.3 721.4 5 707.7 1.1 680.2-0.6 668.1 1.6M293.1 376.6C245.6 385.3 208.9 416.3 194.3 460.2 174.5 519.6 201.3 583.9 257.5 612.1 275.3 621.1 289.1 624 312.5 624 330.5 624 336.3 623.4 346.7 620.2 387.5 607.5 417.8 578.5 430.7 539.8 453.3 472.1 414.9 399.3 346.4 380 332.7 376.1 305.2 374.4 293.1 376.6M668.1 376.6C620.6 385.3 583.9 416.3 569.3 460.2 549.5 519.6 576.3 583.9 632.5 612.1 650.3 621.1 664.1 624 687.5 624 705.5 624 711.3 623.4 721.7 620.2 762.5 607.5 792.8 578.5 805.7 539.8 828.3 472.1 789.9 399.3 721.4 380 707.7 376.1 680.2 374.4 668.1 376.6M293.1 751.6C245.6 760.3 208.9 791.3 194.3 835.2 174.5 894.6 201.3 958.9 257.5 987.1 275.3 996.1 289.1 999 312.5 999 330.5 999 336.3 998.4 346.7 995.2 387.5 982.5 417.8 953.5 430.7 914.8 453.3 847.1 414.9 774.3 346.4 755 332.7 751.1 305.2 749.4 293.1 751.6M668.1 751.6C620.6 760.3 583.9 791.3 569.3 835.2 549.5 894.6 576.3 958.9 632.5 987.1 650.3 996.1 664.1 999 687.5 999 705.5 999 711.3 998.4 721.7 995.2 762.5 982.5 792.8 953.5 805.7 914.8 828.3 847.1 789.9 774.3 721.4 755 707.7 751.1 680.2 749.4 668.1 751.6",
+        "width": 1000
+      },
+      "search": [
+        "drag-handle-svgrepo-com-converted"
+      ]
     }
   ]
 }
