--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ members = [ "data", "exchange"]
 [workspace.dependencies]
 iced_futures = "0.13.2"
 iced_core = "0.14.0-dev"
-chrono = { version = "0.4.40", features = ['serde'] }
-serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4.40", default-features = false, features = ["serde", "now", "clock"] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0.132"
 log = "0.4.22"
 thiserror = "2.0.12"
@@ -24,7 +24,7 @@ rust_decimal = "1.36.0"
 uuid = { version = "1.11.0", features = ["v4"] }
 
 [dependencies]
-iced = { version = "0.14.0-dev", default-features = false, features = [  
+iced = { version = "0.14.0-dev", default-features = false, features = [
     "wgpu", 
     "lazy", 
     "tokio", 
