--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -14,5 +14,6 @@ thiserror.workspace = true
 regex.workspace = true
 dirs-next = "2.0.0"
 rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}
+open = "5.3.2"
 
 exchange = { version = "0.1.0", path = "../exchange" }
