--- a/exchange/Cargo.toml
+++ b/exchange/Cargo.toml
@@ -15,7 +15,7 @@ ordered-float.workspace = true
 uuid.workspace = true
 
 tokio = { version = "1.43", default-features = false }
-reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.9", default-features = false, features = ["json", "brotli", "rustls-tls"] }
 bytes = "1.8.0"
 sonic-rs = { version = "0.5.0", default-features = false }
 fastwebsockets = { version = "0.9.0", default-features = false, features = ["upgrade"] }
