--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -12,6 +12,7 @@ ordered-float.workspace = true
 log.workspace = true
 thiserror.workspace = true
 regex.workspace = true
+palette.workspace = true
 dirs-next = "2.0.0"
 rodio = { version = "0.20.1", default-features = false, features = [ "wav" ]}
 open = "5.3.2"
