use a more compact slider for some chart configs -- e.g. heatmap config sliders needed more space for granular size filtering, which was making them going too much into charting space

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ordered-float = "5.0.0"
 regex = "1.11.1"
 rust_decimal = "1.36.0"
 palette = "0.7.6"
+num-traits = "0.2.19"
 uuid = { version = "1.11.0", features = ["v4"] }
 
 [dependencies]
@@ -44,6 +45,7 @@ ordered-float.workspace = true
 log.workspace = true
 uuid.workspace = true
 palette.workspace = true
+num-traits.workspace = true
 fern = "0.7.1"
 
 exchange = { version = "0.1.0", path = "exchange" }
